# cs3052-pairs-of-points

./: .gitignore  README.md
p01-src/: .gitignore  Cargo.toml  Makefile
p01-src/benches/: benchmarks.rs
p01-src/src/: geometry.rs  lib.rs  parse.rs  point.rs  quick_select.rs
p01-src/src/closest/: closest_v1.rs  divide_and_conquer.rs  mod.rs  task_1.rs  task_3_1.rs  task_3_2.rs  task_4.rs
p01-src/src/cp1/: main.rs
p01-src/src/cp3/: main.rs
p01-src/src/cp3_1/: main.rs
p01-src/src/cp4/: main.rs
p01-src/src/make_points/: main.rs
stacs/: structured.in  ten.in  thousand.in  three.in
