[package]
name = "closest-pairs"
version = "0.1.0"
authors = ["Anson <git@anson-cheung.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "^6.1.2"
itertools = "^0.10.0"
libc = "^0.2.86"

[dev-dependencies]
criterion = "^0.3.4"
rand = "^0.8.3"

[profile.release]
lto = "fat"
debug = true

[[bin]]
name = "cp1"
path = "src/cp1/main.rs"

[[bin]]
name = "cp3"
path = "src/cp3/main.rs"

[[bench]]
name = "benchmarks"
harness = false